--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spotly",
+  "name": "spotlyf",
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
@@ -12,7 +12,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
-  },
+  },  
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
