--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "next-pwa": "^5.6.0",
-    "react": "^18",
-    "react-dom": "^18"
-  },  
+    "react": "^18.3.1",
+    "react-dom": "^18.3.0",
+    "scroll-into-view": "^1.16.2"
+  },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^22.3.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@types/scroll-into-view": "^1.16.4",
+    "eslint": "^8.0.0",
     "eslint-config-next": "14.2.5",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
