--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,8 +6,8 @@
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#000",
-  "theme_color": "#00ff59",
+  "background_color": "#4c4f69",
+  "theme_color": "#181825",
   "icons": [
     {
       "src": "icons/icon.png",
