--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.8",
     "next": "^14.2.5",
-    "next-pwa": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.0",
     "scroll-into-view": "^1.16.2"
