--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "serve out",
     "lint": "next lint"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.8",
+    "kuromoji": "^0.1.2",
+    "kuroshiro": "^1.2.0",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.0",
+    "react-toastify": "^10.0.5",
     "scroll-into-view": "^1.16.2"
   },
   "devDependencies": {
+    "@types/kuromoji": "^0.1.3",
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/scroll-into-view": "^1.16.4",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.2.5",
+    "serve": "^14.2.3",
     "typescript": "^5.5.4"
   }
 }
