--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.8",
+    "axios": "^1.7.4",
     "kuromoji": "^0.1.2",
     "kuroshiro": "^1.2.0",
     "next": "^14.2.5",
